# stm32f303-pac-example

./: Cargo.toml  README.md  debug.gdb  memory.x
.cargo/: config
src/: main.rs
