[package]
name = "stm32f303-pac-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"


[dependencies.stm32f303-pac]
branch = "main"
git = "https://github.com/dreilly1982/stm32f303-pac.git"
features = ["rt"]
